--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,12 @@
 spring.application.name=demo
 
-# 1. The New URL (Host: aws-1-eu-north-1... | Port: 6543)
-spring.datasource.url=jdbc:postgresql://aws-1-eu-north-1.pooler.supabase.com:6543/postgres
+# Database Configuration (Localhost)
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=""
 
-# 2. The New Username (Notice it is longer now)
-spring.datasource.username=postgres.ljnauvhlyxdwbfurrdat
-
-# 3. Your Password
-spring.datasource.password=1357@SoftDesign
-
-# 4. Driver & Dialect Settings
+# Driver & Dialect Settings
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
